--- a/frontend/src/components/logger/Logger.module.css
+++ b/frontend/src/components/logger/Logger.module.css
@@ -9,7 +9,7 @@
     padding: var(--padding-medium);
 }
 
-.logger {
+.panel {
     width: 100%;
     height: 100%;
     max-width: 500px;
@@ -17,6 +17,7 @@
     overflow: hidden;
     border: 2px solid var(--dark-blue);
     border-radius: 7px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .title {
@@ -35,7 +36,7 @@
 .content {
     padding: var(--padding-small);
     max-height: 90%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .content::-webkit-scrollbar {
